# functional_language_features

./: Cargo.toml  README.md  output.txt
src/: lib.rs  main.rs
